--- a/index.html
+++ b/index.html
@@ -13,9 +13,27 @@
             text-transform: capitalize;
             text-align: center;
         }
+        img{
+            width: 50%;
+        }
+        footer{
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size: 2em;
+            color: blueviolet;
+            text-align: center;
+            
+        }
+
     </style>
 </head>
 <body>
     <h1>BIENVENIDOS A GIT-GITHUB</h1>
+    <br>
+    <img src="imagenes/image1.jpg">
+    <br>
+    <br>
+    <footer>
+        &copy; MI PRIMER BAUTIZO CON GIT
+    </footer>
 </body>
 </html>
